--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
-    "error": "10.4.0",
+    "@material-ui/core": "^4.11.4",
     "next": "10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "eslint": "^7.26.0",
+    "jest": "^26.6.3",
+    "typescript": "^4.2.4",
+    "ts-jest": "^26.5.6"
   }
 }
