--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "next": "10.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,7 +19,7 @@
     "@types/react": "^17.0.6",
     "eslint": "^7.26.0",
     "jest": "^26.6.3",
-    "typescript": "^4.2.4",
-    "ts-jest": "^26.5.6"
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
   }
 }
