--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "next": "10.2.1",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
