--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "jest"
+    "dev": "next",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:next": "next build",
+    "build": "npm run build:next && npm run build:server",
+    "start": "SET NODE_ENV=production node dist/index.js",
+    "test": "jest",
+    "eslint": "eslint"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "express": "^4.17.1",
     "next": "10.2.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
@@ -18,6 +22,7 @@
     "react-redux": "^7.2.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/react": "^17.0.6",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
@@ -29,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   }
 }
