--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "clsx": "^1.1.1",
     "express": "^4.17.1",
     "next": "10.2.1",
     "next-redux-wrapper": "^6.0.2",
