--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "ts-node --project tsconfig.server.json ./server",
+    "proxy": "local-ssl-proxy --source 3001 --target 3000",
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
     "build": "npm run build:next && npm run build:server",
     "start": "SET NODE_ENV=production node dist/index.js",
     "test": "jest",
-    "eslint": "eslint"
+    "eslint": "eslint ."
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "local-ssl-proxy": "^1.2.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
