--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@types/multer": "^1.4.6",
     "express": "^4.17.1",
+    "jimp": "^0.16.1",
+    "multer": "^1.4.2",
     "next": "10.2.1",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
@@ -34,7 +37,6 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "local-ssl-proxy": "^1.2.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
