--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@types/gm": "^1.18.9",
     "@types/multer": "^1.4.6",
+    "downloadjs": "^1.4.7",
     "express": "^4.17.1",
-    "jimp": "^0.16.1",
+    "gm": "^1.23.1",
     "multer": "^1.4.2",
     "next": "10.2.1",
     "next-redux-wrapper": "^6.0.2",
